fix: headshot width overflowing.

--- a/site/src/landing-page/landing-page.scss
+++ b/site/src/landing-page/landing-page.scss
@@ -3,3 +3,7 @@
 @use "@css/variables" as v;
 
 @include theme.foundation;
+
+.my-headshot {
+  width: 298px;
+}
